[package]
name = "runt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1.1"
comrak = "0.15"
la-arena = "0.2.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
