[package]
name = "runt"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = "4.1.1"
comrak = "0.21"
la-arena = "0.3.1"


[dev-dependencies]
dedent-macro = { git = "https://github.com/jharrilim/dedent-macro-rs.git" }
insta = { version = "1.34.0", features = ["yaml"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
